<resources>
    <string name="app_name">Labo 4</string>
    <string name="main_menu_sort">Sort</string>
    <string name="main_menu_sort_eta">ETA</string>
    <string name="main_menu_sort_cd">Creation Date</string>
    <string name="main_menu_actions_generate">Generate</string>
    <string name="main_menu_actions_delete">Delete All</string>
    <string name="generate_button_text">GENERATE</string>
    <string name="button_delete_text">DELETE</string>
</resources>