<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/sort"
        android:title="@string/main_menu_sort"
        android:icon="@drawable/sort"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/creation_date_item"
                android:title="@string/main_menu_sort_cd" />
            <item android:id="@+id/ETA_item"
                android:title="@string/main_menu_sort_eta" />
        </menu>
    </item>

    <item android:id="@+id/Generate_item"
        android:title="@string/main_menu_actions_generate"
        app:showAsAction="never"
        />

    <item android:id="@+id/DeleteAll_item"
        android:title="@string/main_menu_actions_delete"
        app:showAsAction="never"
        />
</menu>
